apps/traefik/crowdsec.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: crowdsec-bouncer
  namespace: traefik
spec:
  plugin:
    crowdsec-bouncer:
      enabled: true
      logLevel: INFO
      crowdsecMode: stream
      clientTrustedIPs:
        - ${CROWDSEC_TRUSTED_HEADSCALE_CLIENT_IP}
      crowdsecLapiScheme: http
      crowdsecLapiHost: crowdsec-service.crowdsec.svc.cluster.local:8080
      crowdsecLapiKeyFile: /run/secrets/crowdsec/bouncerKey
      crowdsecAppsecEnabled: true
      crowdsecAppsecScheme: http
      crowdsecAppsecHost: crowdsec-appsec-service.crowdsec.svc.cluster.local:7422
      crowdsecAppsecFailureBlock: true
      crowdsecAppsecUnreachableBlock: false
      crowdsecAppsecUnreadableBodyBlock: false
