apps/traefik/forward-auth.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authentik-forward-auth
  namespace: traefik
spec:
  forwardAuth:
    address: http://authentik-server.authentik.svc.cluster.local/outpost.goauthentik.io/auth/traefik
    trustForwardHeader: true
    maxResponseBodySize: 4194304
    authResponseHeaders:
      - X-authentik-username
      - X-authentik-groups
      - X-authentik-entitlements
      - X-authentik-email
      - X-authentik-name
      - X-authentik-uid
      - X-authentik-jwt
      - X-authentik-meta-jwks
      - X-authentik-meta-outpost
      - X-authentik-meta-provider
      - X-authentik-meta-app
      - X-authentik-meta-version
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dashboard-root-redirect
  namespace: traefik
spec:
  redirectRegex:
    regex: ^https?://[^/]+/?$
    replacement: https://${TRAEFIK_HOST}/dashboard/
    permanent: true
---
apiVersion: v1
kind: Service
metadata:
  name: authentik-embedded-outpost
  namespace: traefik
  annotations:
spec:
  type: ExternalName
  externalName: authentik-server.authentik.svc.cluster.local
  ports:
    - name: http
      port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik-embedded-outpost
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`${TRAEFIK_HOST}`) && Path(`/`)
      priority: 20
      middlewares:
        - name: dashboard-root-redirect
      services:
        - kind: TraefikService
          name: api@internal
    - kind: Rule
      match: Host(`${TRAEFIK_HOST}`) && PathPrefix(`/outpost.goauthentik.io/`)
      priority: 15
      services:
        - kind: Service
          name: authentik-embedded-outpost
          port: 80
  tls:
    secretName: traefik-dashboard-tls
